added instructions on application load

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <h1>
             Javascript Quiz
         </h1>
+        
 
     </header>
     <main>
+        <p id = instructions>
+            This is a timed quiz to test your knowledge on Javascript. You will have 30 seconds to complete. If you answer a question incorrectly, 5 seconds will be deducted from the timer. Click below to begin!
+        </p>
         <h2 id = questionContainer>Are you ready to begin?</h2>
         <div id = answerContainer>
             <button id="startQuiz" class="startButton">Take Quiz</button>
